MGS-2155 Fixed group format layout issues.

--- a/src/scss/base/_base.headings.scss
+++ b/src/scss/base/_base.headings.scss
@@ -311,3 +311,8 @@ h2.emphasis {
     margin: 0 0 14px 0;
   }
 }
+
+//Fix for spacing in additional content (e.g. groups). Combines with h4's 7px bottom margin
+h4 + ul {
+  margin-top: 14px;
+}
